--- a/package.json
+++ b/package.json
@@ -1,67 +1,58 @@
-
-  {
-      "name": "프로젝트 구성원 투입 현황 대시보드 (Community)",
-      "version": "0.1.0",
-      "private": true,
-      "dependencies": {
-          "@radix-ui/react-accordion": "^1.2.3",
-          "@radix-ui/react-alert-dialog": "^1.1.6",
-          "@radix-ui/react-aspect-ratio": "^1.1.2",
-          "@radix-ui/react-avatar": "^1.1.3",
-          "@radix-ui/react-checkbox": "^1.1.4",
-          "@radix-ui/react-collapsible": "^1.1.3",
-          "@radix-ui/react-context-menu": "^2.2.6",
-          "@radix-ui/react-dialog": "^1.1.6",
-          "@radix-ui/react-dropdown-menu": "^2.1.6",
-          "@radix-ui/react-hover-card": "^1.1.6",
-          "@radix-ui/react-label": "^2.1.2",
-          "@radix-ui/react-menubar": "^1.1.6",
-          "@radix-ui/react-navigation-menu": "^1.2.5",
-          "@radix-ui/react-popover": "^1.1.6",
-          "@radix-ui/react-progress": "^1.1.2",
-          "@radix-ui/react-radio-group": "^1.2.3",
-          "@radix-ui/react-scroll-area": "^1.2.3",
-          "@radix-ui/react-select": "^2.1.6",
-          "@radix-ui/react-separator": "^1.1.2",
-          "@radix-ui/react-slider": "^1.2.3",
-          "@radix-ui/react-slot": "^1.1.2",
-          "@radix-ui/react-switch": "^1.1.3",
-          "@radix-ui/react-tabs": "^1.1.3",
-          "@radix-ui/react-toggle": "^1.1.2",
-          "@radix-ui/react-toggle-group": "^1.1.2",
-          "@radix-ui/react-tooltip": "^1.1.8",
-          "@vitejs/plugin-react": "*",
-          "class-variance-authority": "^0.7.1",
-          "clsx": "*",
-          "cmdk": "^1.1.1",
-          "date-fns": "^3.6.0",
-          "embla-carousel-react": "^8.6.0",
-          "fs": "*",
-          "input-otp": "^1.4.2",
-          "lucide-react": "^0.487.0",
-          "motion": "*",
-          "next-themes": "^0.4.6",
-          "path": "*",
-          "react": "^18.3.1",
-          "react-day-picker": "*",
-          "react-dom": "^18.3.1",
-          "react-hook-form": "^7.55.0",
-          "react-resizable-panels": "^2.1.7",
-          "recharts": "^2.15.2",
-          "sonner": "^2.0.3",
-          "tailwind-merge": "*",
-          "url": "*",
-          "vaul": "^1.1.2",
-          "vite": "*",
-          "web-vitals": "*"
-      },
-      "devDependencies": {
-          "@types/node": "^20.10.0",
-          "@vitejs/plugin-react-swc": "^3.10.2",
-          "vite": "6.3.5"
-      },
-      "scripts": {
-          "dev": "vite",
-          "build": "vite build"
-      }
-  }
+{
+  "name": "project-management-dashboard",
+  "version": "1.0.0",
+  "description": "프로젝트별 구성원 투입 현황을 관리하는 대시보드 애플리케이션",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "deploy": "npm run build && gh-pages -d dist",
+    "predeploy": "npm run build", 
+    "deploy-check": "node deploy-check.js",
+    "clean": "rm -rf dist node_modules/.vite",
+    "type-check": "tsc --noEmit"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.487.0",
+    "recharts": "^2.12.7",
+    "react-hook-form": "^7.55.0",
+    "sonner": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^4.0.0-beta.5",
+    "typescript": "~5.6.2",
+    "vite": "^6.0.1"
+  },
+  "keywords": [
+    "project-management",
+    "dashboard",
+    "react",
+    "typescript",
+    "tailwindcss",
+    "clubschool"
+  ],
+  "author": "Clubschool Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/parkh37t/clubschool.git"
+  },
+  "homepage": "https://parkh37t.github.io/clubschool"
+}
